test/modules/standard/FileSystem/lydia/chmod/chmod_nonexistent.good
chmod_nonexistent.chpl:5: error: uncaught error - No such file or directory in chmod with path "nonexistent"
